--- a/serverside/package.json
+++ b/serverside/package.json
@@ -11,9 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15"
   }
